# Skills-SynLinks

./: .gitignore  README.md  etgit reset[1  setup-symlinks.ps1  setup-symlinks.sh  subir-todo.ps1
AKI-WEB-BACKEND/: .env.example  .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup-symlinks.ps1  setup-symlinks.sh
AKI-WEB-BACKEND/.claude/: .gitkeep
AKI-WEB-BACKEND/.cursor/: skills
AKI-WEB-BACKEND/.github/: .gitkeep
AKI-WEB-BACKEND/.skills/repo-documentation/: SKILL.md
AKI-WEB-BACKEND/.skills/repo-rules/: SKILL.md
AKI-WEB-BACKEND/.skills/stored-procedures/: SKILL.md
AKI-WEB-BACKEND/src/: api.py  api_config.py  config.py  logging_config.py  main.py
AKI-WEB-BACKEND/src/core/: __init__.py  dependencies.py
AKI-WEB-BACKEND/src/core/database/: __init__.py  base.py  session.py  session_manager.py
AKI-WEB-BACKEND/src/features/auth/: dependencies.py  models.py  repositories.py  schemas.py  services.py
AKI-WEB-BACKEND/src/features/forms/: config.py  constants.py  dependencies.py  endpoints.py  mappings.py  models.py  repositories.py  schemas.py  services.py  utils.py
AKI-WEB-BACKEND/src/features/groups/: dependencies.py  endpoints.py  repositories.py  schemas.py  services.py
AKI-WEB-BACKEND/src/features/packages_files/: dependencies.py  endpoints.py  (+4 more)
AKI-WEB-BACKEND/src/settings/: __init__.py  api_settings.py  azure_storage_settings.py  cors_settings.py  oauth2_settings.py  sqlalchemy_settings.py
AKI-WEB-BACKEND/src/shared/: base_repository.py  dependencies.py  schemas.py  utils.py
AKI-WEB-BACKEND/test/: test_main.py
(+19 files in other folders)
