[project]
name = "aki-collector"
version = "1.1.2"
description = "AKI data collector backend"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aioodbc>=0.5.0",
    "anyio>=4.10.0",
    "asgi-correlation-id>=4.3.4",
    "azure-identity>=1.24.0",
    "azure-storage-blob>=12.26.0",
    "cryptography>=43.0.3",
    "email-validator>=2.2.0",
    "faker>=37.6.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
    "orjson>=3.11.3",
    "pandas>=2.3.2",
    "pwdlib[argon2]>=0.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt[crypto]>=2.10.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "xlsxwriter>=3.2.5",
]
